--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,48 @@
-template-repository (1.0-1) unstable; urgency=medium
+rust-nom (7.1.1-1) unstable; urgency=medium
 
-  * Initial release
+  * Team upload.
+  * Package nom 7.1.1 from crates.io using debcargo 2.5.0
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 04 Jun 2022 12:45:11 +0200
+
+rust-nom (7.1.0-2) unstable; urgency=medium
+
+  * Team upload.
+  * Package nom 7.1.0 from crates.io using debcargo 2.5.0
+  * Upload to unstable
+
+ -- James McCoy <jamessan@debian.org>  Sat, 05 Mar 2022 15:44:28 -0500
+
+rust-nom (7.1.0-1) experimental; urgency=medium
+
+  * Team upload.
+  * Package nom 7.1.0 from crates.io using debcargo 2.5.0  (Closes: #1001135)
+
+ -- James McCoy <jamessan@debian.org>  Mon, 07 Feb 2022 22:01:07 -0500
+
+rust-nom (5.0.1-4) unstable; urgency=medium
+
+  * Team upload.
+  * Package nom 5.0.1 from crates.io using debcargo 2.2.10
+
+  * Source upload for rebuild...
+
+ -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 28 Oct 2019 21:31:39 +0100
+
+rust-nom (5.0.1-3) unstable; urgency=medium
+
+  * Source-only re-upload for migration to testing
+
+ -- kpcyrd <git@rxv.cc>  Mon, 28 Oct 2019 18:19:08 +0100
+
+rust-nom (5.0.1-1) unstable; urgency=medium
+
+  * Package nom 5.0.1 from crates.io using debcargo 2.4.0
+
+ -- kpcyrd <git@rxv.cc>  Fri, 11 Oct 2019 14:54:41 +0200
+
+rust-nom (4.0.0-1) unstable; urgency=medium
+
+  * Package nom 4.0.0 from crates.io using debcargo 2.2.5
+
+ -- Emmanouil Kampitakis <info+debian@kampitakis.de>  Fri, 03 Aug 2018 00:54:51 -0700
